[tool.poetry]
name = "configly"
version = "0.2.2"
description = ""
authors = []
license = "MIT"
keywords = [ "config", "yaml", "toml", "env" ]
repository = "https://github.com/schireson/configly"
packages = [
    { from = "src", include = "configly" },
]
readme = 'README.md'
include = [
    "*.md",
]

[tool.poetry.dependencies]
python = ">=3.6,<4"

'ruamel.yaml' = { version = "*", optional = true }
toml = { version = "*", optional = true }
hvac = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
bandit = "*"
black = { version = "19.3b0", allow-prereleases = true, python = ">=3.6" }
coverage = ">=5"
flake8 = "^3.7"
isort = "^4.3"
pydocstyle = "*"
pytest = "^4.4"
responses = "*"
mypy = "^0.910"
types-toml = "^0.1.5"

[tool.poetry.extras]
yaml = [ "ruamel.yaml" ]
toml = [ "toml" ]
vault = [ "hvac" ]

[tool.black]
line_length = 100
target_version = [ 'py36', 'py37', 'py38' ]

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 88
multi_line_output = 3
order_by_type = false
known_first_party = 'tests'
use_parentheses = true

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
